--- a/testers.html
+++ b/testers.html
@@ -75,7 +75,7 @@
                 </p>
 
                 <form
-  action="YOUR_WEB_APP_URL_HERE"
+  action="https://script.google.com/macros/s/AKfycby1msi0HCL9ETusO7Xl-SlLav4O4UIK6kcGNcdjCx1dykcvO-53qolegLP5a84ATxwvzg/exec"
   method="POST"
   target="_blank"
 >
@@ -163,4 +163,5 @@
     </footer>
   </body>
 </html>
+
 
