--- a/support.html
+++ b/support.html
@@ -98,7 +98,7 @@
                   and contact local authorities if needed before anything else.
                 </p>
                 <form
-  action="YOUR_WEB_APP_URL_HERE"
+  action="https://script.google.com/macros/s/AKfycby1msi0HCL9ETusO7Xl-SlLav4O4UIK6kcGNcdjCx1dykcvO-53qolegLP5a84ATxwvzg/exec"
   method="POST"
   target="_blank"
 >
@@ -146,4 +146,5 @@
     </footer>
   </body>
 </html>
+
 
