--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,10 @@
             <div>
               <div class="card">
                 <span class="badge">Message us</span>
-               <form
+              <form
   action="https://script.google.com/macros/s/AKfycby1msi0HCL9ETusO7Xl-SlLav4O4UIK6kcGNcdjCx1dykcvO-53qolegLP5a84ATxwvzg/exec"
   method="POST"
-  target="_blank"
+  onsubmit="handleContactSubmit()"
 >
   <input type="hidden" name="formType" value="contact" />
 
@@ -93,7 +93,25 @@
   </div>
 
   <button class="btn btn-primary" type="submit">Send</button>
+
+  <!-- Status message area -->
+  <div
+    id="contact-status"
+    class="muted"
+    style="margin-top: 0.6rem; font-size: 0.85rem;"
+  ></div>
 </form>
+
+<script>
+  function handleContactSubmit() {
+    var statusEl = document.getElementById("contact-status");
+    if (statusEl) {
+      statusEl.textContent = "Thank you! Your message has been sent.";
+    }
+    // Let the form submit normally so Apps Script receives it
+  }
+</script>
+
 
               </div>
             </div>
@@ -117,4 +135,5 @@
     </footer>
   </body>
 </html>
+
 
