Refactor testers.html for improved structure

--- a/testers.html
+++ b/testers.html
@@ -161,6 +161,11 @@
                 </ul>
               </div>
             </div>
+            <p class="section-text" style="margin-top: 1.2rem;">
+  Already an approved tester?
+  <a href="tester-portal.html">Go to the tester portal</a>.
+</p>
+
           </div>
         </section>
       </div>
@@ -181,3 +186,4 @@
     </footer>
   </body>
 </html>
+
