--- a/index.html
+++ b/index.html
@@ -75,33 +75,53 @@
                 </p>
 
                 <form
-                  action="#"
-                  method="post"
-                  style="margin-top: 0.8rem;"
-                  onsubmit="alert('This is a placeholder. Connect to your real form handler or service.'); return false;"
-                >
-                  <div class="form-field">
-                    <label for="name">Name</label>
-                    <input id="name" name="name" type="text" required />
-                  </div>
-                  <div class="form-field">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" type="email" required />
-                  </div>
-                  <div class="form-field">
-                    <label for="location">City / Region</label>
-                    <input id="location" name="location" type="text" />
-                  </div>
-                  <div class="form-field">
-                    <label for="why"
-                      >Why are you interested in testing Prox?</label
-                    >
-                    <textarea id="why" name="why"></textarea>
-                  </div>
-                  <button class="btn btn-primary" type="submit">
-                    Request tester access
-                  </button>
-                </form>
+  action="https://script.google.com/macros/s/AKfycby1msi0HCL9ETusO7Xl-SlLav4O4UIK6kcGNcdjCx1dykcvO-53qolegLP5a84ATxwvzg/exec"
+  method="POST"
+  style="margin-top: 0.8rem;"
+  onsubmit="handleHomeTesterSubmit()"
+>
+  <input type="hidden" name="formType" value="tester-signup-home" />
+
+  <div class="form-field">
+    <label for="name">Name</label>
+    <input id="name" name="name" type="text" required />
+  </div>
+  <div class="form-field">
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email" required />
+  </div>
+  <div class="form-field">
+    <label for="location">City / Region</label>
+    <input id="location" name="subject" type="text" />
+  </div>
+  <div class="form-field">
+    <label for="why"
+      >Why are you interested in testing Prox?</label
+    >
+    <textarea id="why" name="message"></textarea>
+  </div>
+  <button class="btn btn-primary" type="submit">
+    Request tester access
+  </button>
+
+  <div
+    id="home-tester-status"
+    class="muted"
+    style="margin-top: 0.6rem; font-size: 0.85rem;"
+  ></div>
+</form>
+
+<script>
+  function handleHomeTesterSubmit() {
+    var statusEl = document.getElementById("home-tester-status");
+    if (statusEl) {
+      statusEl.textContent =
+        "Thank you! Your request has been sent. We'll be in touch soon.";
+    }
+    // Let the form submit so Apps Script receives it
+  }
+</script>
+
               </div>
             </div>
           </div>
@@ -159,3 +179,4 @@
     </footer>
   </body>
 </html>
+
