--- a/tester-portal.html
+++ b/tester-portal.html
@@ -110,10 +110,9 @@
                     devices you’re comfortable using for testing.
                   </p>
 
-                  <!-- TODO: replace href with your real APK URL -->
                   <p style="margin: 0.8rem 0 0.2rem;">
                     <a
-                      href="https://example.com/path/to/prox-tester-build.apk"
+                      href="https://github.com/marolam/prox/releases/download/v1.0/app-release.apk"
                       class="btn btn-primary"
                       download
                     >
@@ -121,14 +120,13 @@
                     </a>
                   </p>
 
-                  <!-- Build metadata – update manually when you upload a new build -->
                   <p
                     class="muted"
                     style="font-size: 0.82rem; margin-top: 0.4rem;"
                   >
-                    Build: <strong>Prox Tester v0.1.0 (Android)</strong><br />
+                    Build: <strong>Prox Tester v1.0 (Android)</strong><br />
                     Uploaded: <strong>Dec 2025</strong><br />
-                    Notes: <em>Initial internal tester build.</em>
+                    Notes: <em>First signed tester build via GitHub Releases.</em>
                   </p>
                 </div>
               </div>
@@ -191,7 +189,6 @@
                   Use the button below to upload files (screenshots, videos, log
                   files) to the shared folder.
                 </p>
-                <!-- TODO: replace href with your Google Drive "file request" or folder link -->
                 <p style="margin-top: 0.8rem;">
                   <a
                     href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_HERE"
@@ -263,7 +260,7 @@
                       id="tf-build"
                       name="subject"
                       type="text"
-                      placeholder="e.g. v0.1.0-android"
+                      placeholder="e.g. v1.0-android"
                     />
                   </div>
 
@@ -345,7 +342,6 @@
           }
 
           if (value === TESTER_PORTAL_PASSWORD) {
-            // Remember unlocked state for this browser
             try {
               localStorage.setItem(STORAGE_KEY, "true");
             } catch (e) {
@@ -366,7 +362,6 @@
           if (portal) portal.style.display = "block";
         }
 
-        // On load, check if this browser already unlocked the portal
         (function () {
           try {
             var unlocked = localStorage.getItem(STORAGE_KEY);
@@ -378,7 +373,6 @@
           }
         })();
 
-        // Feedback form status
         function handleTesterFeedbackSubmit() {
           var statusEl = document.getElementById("tester-feedback-status");
           if (statusEl) {
