Revise users.html for clarity and engagement
Updated the content and structure of users.html to enhance user engagement and clarify the purpose of Prox.

--- a/users.html
+++ b/users.html
@@ -5,7 +5,7 @@
     <title>Prox – For Users</title>
     <meta
       name="description"
-      content="Learn how Prox helps you find the right people nearby based on what you’re looking for and what you can offer."
+      content="See how Prox helps everyday users find trustworthy, real-world meetups with people nearby."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
@@ -26,110 +26,123 @@
               <a href="testers.html">Testers</a>
               <a href="marketing.html">Marketing</a>
               <a href="support.html">Support</a>
-              <a href="news.html">News</a>
-              <a href="social.html">Social</a>
-              <a href="contact.html">Contact</a>
             </nav>
-            <a href="testers.html" class="btn btn-primary nav-cta">
-              Secure Your Spot
-            </a>
           </div>
         </div>
       </div>
     </header>
 
-    <main>
-      <div class="main-inner">
-        <section class="section">
-          <div class="section-eyebrow">For everyday people</div>
-          <h1 class="section-title">Use Prox to find who you’re looking for.</h1>
-          <p class="section-text">
-            Prox is for people who want to move past endless feeds and actually
-            connect. Whether you’re looking for help, skills, collaboration, or
-            just a friendly meetup, Prox is built to get you face-to-face
-            quickly and safely.
-          </p>
-        </section>
-
-        <section class="section section-alt">
-          <div class="grid-2">
-            <div>
-              <h2 class="section-title">You control what you share.</h2>
-              <p class="section-text">
-                Prox focuses on what matters: what you’re looking for and what
-                you can provide. You choose your visible keywords, your matching
-                radius, and when you’re discoverable. Location-based tools work
-                only when you opt in.
-              </p>
-              <ul class="check-list">
-                <li>Set your radius – from “right next door” to wider search.</li>
-                <li>Pick your keywords: “Can teach guitar,” “Need moving help,” “Looking for co-founder,” and more.</li>
-                <li>Toggle between personal mode, business mode (later), or off.</li>
-              </ul>
-            </div>
-            <div>
-              <div class="card-soft">
-                <strong style="font-size: 0.9rem;">Examples of how people might use Prox</strong>
-                <ul class="check-list">
-                  <li>Someone who can fix bikes and someone whose chain just snapped.</li>
-                  <li>A traveler looking for a local photographer.</li>
-                  <li>Neighbors trading tools or help in a hurry.</li>
-                  <li>People exploring new hobbies together, not just matching on interests in a bio.</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="section">
-          <div class="grid-2">
-            <div>
-              <h2 class="section-title">What a typical meetup looks like.</h2>
-              <ol class="check-list" style="counter-reset: step;">
-                <li>Open Prox and see who nearby matches what you need or offer.</li>
-                <li>Start a chat with someone whose profile looks like a fit.</li>
-                <li>Pick a public meetup spot using the map tools inside the app.</li>
-                <li>Confirm arrival, meet up, and mark how it went afterwards.</li>
-              </ol>
-              <p class="section-text">
-                Those ratings and confirmations feed back into the trust system,
-                so over time reliable people naturally rise to the top.
-              </p>
-            </div>
-            <div>
-              <div class="card">
-                <span class="badge">Coming soon</span>
-                <h3 style="margin: 0.7rem 0 0.4rem;">Prox Points for users</h3>
-                <p class="muted" style="font-size: 0.88rem;">
-                  Good experiences shouldn’t just disappear. Prox Points will
-                  reward people who show up on time, treat others well, help
-                  resolve issues, and bring new users into the community.
-                </p>
-                <div class="chip-row" style="margin-top: 0.8rem;">
-                  <span class="chip">Good meetups</span>
-                  <span class="chip">Helpful reports</span>
-                  <span class="chip">Referrals</span>
-                  <span class="chip">Community roles</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+    <!-- HERO -->
+    <section class="hero users-hero">
+      <div class="hero-content">
+        <h1>For People Who Actually Meet Up</h1>
+        <p>
+          Prox is for people who want less scrolling and more real-world
+          interaction—meeting up to trade skills, offer help, or just connect.
+        </p>
       </div>
-    </main>
+    </section>
+
+    <!-- HOW IT WORKS -->
+    <section class="how-it-works">
+      <div class="section-inner">
+        <h2>How Prox Works</h2>
+        <ol class="numbered-steps">
+          <li>
+            <h3>1. Set What You’re Looking For</h3>
+            <p>
+              Add a few simple keywords: what you’re looking for and what you
+              can offer—skills, gear, help, time, whatever fits.
+            </p>
+          </li>
+          <li>
+            <h3>2. See Nearby Matches</h3>
+            <p>
+              Prox quietly looks for people nearby whose needs and offers line
+              up with yours. You control your radius and when you’re available.
+            </p>
+          </li>
+          <li>
+            <h3>3. Chat & Confirm a Meetup</h3>
+            <p>
+              When a match looks good, chat to confirm details. Prox nudges you
+              with simple, one-tap prompts to keep things clear and on time.
+            </p>
+          </li>
+          <li>
+            <h3>4. Meet, Then Leave Quick Feedback</h3>
+            <p>
+              After the meetup, tap 👍 or 👎 and optionally add a note. That’s it.
+              Over time, this builds a trust picture that actually means
+              something.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- USER WAITLIST FORM -->
+    <section class="signup-section">
+      <div class="section-inner">
+        <h2>Join the User Waitlist</h2>
+        <p>
+          We’re rolling out Prox in small batches so we can keep things stable
+          and responsive. Add your info to be invited when your area opens up.
+        </p>
+
+        <form
+          class="simple-form"
+          action="https://formsubmit.co/YOUR_USER_WAITLIST_EMAIL_HERE"
+          method="POST"
+        >
+          <input type="hidden" name="_captcha" value="false" />
+          <input
+            type="hidden"
+            name="_subject"
+            value="New user waitlist signup"
+          />
+          <input
+            type="hidden"
+            name="_template"
+            value="table"
+          />
+
+          <label>
+            Name
+            <input type="text" name="name" required />
+          </label>
+
+          <label>
+            Email
+            <input type="email" name="email" required />
+          </label>
+
+          <label>
+            City / Region
+            <input type="text" name="location" required />
+          </label>
+
+          <label>
+            How do you see yourself using Prox?
+            <textarea
+              name="use_case"
+              rows="3"
+              placeholder="Finding help, offering services, meeting locals..."
+            ></textarea>
+          </label>
+
+          <button type="submit" class="btn-primary">Join the Waitlist</button>
+        </form>
+      </div>
+    </section>
 
     <!-- FOOTER -->
     <footer>
       <div class="footer-inner">
-        <div>© <span id="year"></span> Prox. All rights reserved.</div>
-        <div class="muted">
-          Bringing the human focus back to the technology world.
-        </div>
+        <div class="footer-logo">PROX</div>
+        <p class="footer-tagline">Let what you seek find you.</p>
+        <p class="footer-copy">&copy; 2025 Prox. All rights reserved.</p>
       </div>
-      <script>
-        document.getElementById("year").textContent =
-          new Date().getFullYear();
-      </script>
     </footer>
   </body>
 </html>
